<resources>
	<string name="app_name">Kithara</string>
	<string name="action_settings">Settings</string>
	<string name="User">User</string>
	<string name="openDrawer">openDrawer</string>
	<string name="closeDrawer">closeDrawer</string>
	<string name="previous_page">Previous Page</string>


	<!-- 	Main Context	-->
	<string name="Welcome">Καλως ήρθατε στο Kithara</string>
	<string name="Advice_1">Η καλύτερη εφαρμογή για Κιθαρίστες</string>
	<string name="Advice_2">-Μπορείτε να δείτε όποιο τραγούδι θέλετε χωρίς εγγραφη</string>
	<string name="Advice_3">-Για να δημιουργήσεται ένα νέο τραγούδι χρειάζεται εγγραφή</string>

	<!--    Navigation navigation_header -->
	<string name="navigation_username">No Login </string>
	<string name="navigation_email">No Login</string>

	<!--    Navigation Item -->
	<string name="import_songBasic">Import Song</string>
	<string name="title">Search Title</string>
	<string name="taverns">Ερμηνευτές</string>
	<string name="rempetadika">Δημιουργοί</string>
	<string name="beers">Στιχουργοί</string>
	<string name="border">Border</string>
	<string name="acc_user">User</string>

	<!--    Button  -->
	<string name="next">Next</string>
	<string name="back">Back</string>
	<string name="Cancel">Cancel</string>
	<string name="btnSearch">Search</string>
	<string name="Ok">OK</string>
	<string name="import_song">Import</string>


	<!-- Login -->
	<string name="Login">Login</string>
	<string name="Email">Enter Username</string>
	<string name="Password">Enter Password</string>
	<string name="btnRegister">Register</string>

	<string name="Email_Profile">Email</string>
	<string name="Username_Profile">Username</string>
	<string name="Password_Profile">Password</string>
	<string name="Logout">Logout</string>
	<string name="Edit">Edit</string>

	<!-- User  -->
	<!-- Register User -->
	<string name="Username_Register">Username</string>
	<string name="currentPassword">Current Password</string>
	<string name="newPassword">New Password</string>
	<string name="Password_Register">Password</string>
	<string name="Password_Register_repeat">Password \n repeat</string>
	<string name="Email_Register">Email</string>
	<string name="Photo_register">Φωτογραφία</string>
	<string name="Accept">Accept</string>
	<string name="Change">Change</string>
	<string name="Cancel_register">Απορριψη</string>
	<string name="Email_hint">subject@server.com</string>

	<!-- Profile -->
	<string name="My_Songs">My Songs</string>




	<!--    Import Song  -->
	<string name="song_preamble_import">Συμπληρώστε Τις Συνχωρδίες Της Εισαγωγής</string>
	<string name="song_lyrics">Συμπληρώστε τους στίχους</string>

	<!--	Search Song	-->
	<string name="find_title">Ευρετήριο τίτλων</string>
	<string name="second_title">Επιλέξτε ένα γράμα πατώντας το αντίστοιχω κουμπί επιβεβαίωσης </string>
	<string name="search_letter">Επιλέγτε ένα γράμμα</string>
	<string name="search_by_title">Αναζήση τραγουδιού </string>
	<string name="search_by_title_editText">Εισάγεται τον τίτλο του τραγουδιού</string>

	<!--	Song Detail	-->
	<string name="Title">Τίτλος Τραγουδιού</string>
	<string name="Singer">Ερμηνευτής</string>
	<string name="Music">Μουσικη</string>
	<string name="Versification">Στιχουργός</string>

	<!--	Letters	-->
	<string-array name="spinner_title_letter_greek">
		<item>Α</item>
		<item>Β</item>
		<item>Γ</item>
		<item>Δ</item>
		<item>Ε</item>
		<item>Ζ</item>
		<item>Η</item>
		<item>Θ</item>
		<item>Ι</item>
		<item>Κ</item>
		<item>Λ</item>
		<item>Μ</item>
		<item>Ν</item>
		<item>Ξ</item>
		<item>Ο</item>
		<item>Π</item>
		<item>Ρ</item>
		<item>Σ</item>
		<item>Τ</item>
		<item>Υ</item>
		<item>Φ</item>
		<item>Χ</item>
		<item>Ψ</item>
		<item>Ω</item>
	</string-array>
	<string-array name="spinner_title_letter_english">
		<item>A</item>
		<item>B</item>
		<item>C</item>
		<item>D</item>
		<item>E</item>
		<item>F</item>
		<item>G</item>
		<item>H</item>
		<item>I</item>
		<item>J</item>
		<item>K</item>
		<item>L</item>
		<item>M</item>
		<item>N</item>
		<item>O</item>
		<item>P</item>
		<item>Q</item>
		<item>R</item>
		<item>S</item>
		<item>T</item>
		<item>U</item>
		<item>V</item>
		<item>W</item>
		<item>X</item>
		<item>Y</item>
		<item>Z</item>
	</string-array>
	<string-array name="spinner_title_letter_numeric">
		<item>0</item>
		<item>1</item>
		<item>2</item>
		<item>3</item>
		<item>4</item>
		<item>5</item>
		<item>6</item>
		<item>7</item>
		<item>8</item>
		<item>9</item>
	</string-array>

	<!--	Song Profile	Transpose	-->
	<string-array name="transpose">
		<item>-6</item>
		<item>-5</item>
		<item>-4</item>
		<item>-3</item>
		<item>-2</item>
		<item>-1</item>
		<item>0</item>
		<item>+1</item>
		<item>+2</item>
		<item>+3</item>
		<item>+4</item>
		<item>+5</item>
		<item>+6</item>
	</string-array>
	<string name="transpose">Transpose</string>

</resources>
