<menu
	xmlns:android = "http://schemas.android.com/apk/res/android"
	xmlns:app = "http://schemas.android.com/apk/res-auto"
	xmlns:tools = "http://schemas.android.com/tools"
	tools:context = "com.example.ntinos.Kithara.MainActivity">

	<group android:checkableBehavior = "single">
		<item
			android:id = "@+id/action_settings"
			android:orderInCategory = "100"
			android:title = "@string/action_settings"
			app:showAsAction = "never" />

		<item
			android:id = "@+id/acc_user"
			android:icon = "@drawable/ic_user"
			android:title = "@string/acc_user"
			android:orderInCategory = "2"
			app:showAsAction = "ifRoom"
			/>

		<item
			android:id = "@+id/home"
			android:icon = "@mipmap/ic_home"
			android:orderInCategory = "1"
			app:showAsAction = "ifRoom"
			android:title = "@string/previous_page"/>
	</group>
</menu>
