<RelativeLayout
	xmlns:android = "http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">


	<RelativeLayout
		android:orientation = "horizontal"
		android:gravity="center"
		android:layout_width = "match_parent"
		android:layout_height = "match_parent"
		android:layout_marginStart = "10dp"
		android:layout_marginBottom="100dp"
		android:layout_marginEnd = "10dp">

		<!-- Username -->

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id = "@+id/Username_Register"
			android:text = "@string/Username_Register"
			android:textSize = "20sp"
			android:textColor = "#000000"/>

		<EditText
			android:layout_width = "150dp"
			android:layout_height = "wrap_content"
			android:id = "@+id/Username_register_edit"
			android:labelFor = "@+id/Username_register_edit"
			android:background = "@drawable/border"
			android:inputType = "text"
			android:layout_alignParentRight="true"/>

		<!-- 	Email -->
		<TextView
			android:id = "@+id/Email_Register"
			android:text = "@string/Email_Register"
			android:layout_below="@+id/Username_Register"
			android:textSize = "20sp"
			android:textColor = "#000000"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"/>

		<EditText
			android:layout_marginTop="20dp"
			android:layout_width = "150dp"
			android:layout_height = "wrap_content"
			android:id = "@+id/Email_register_edit"
			android:layout_below="@+id/Username_register_edit"
			android:background = "@drawable/border"
			android:inputType = "textEmailAddress"
			android:hint = "@string/Email_hint"
			android:layout_alignParentRight="true"/>

		<!-- Password -->
		<TextView
			android:layout_width = "wrap_content"
			android:layout_height = "wrap_content"
			android:layout_below="@+id/Email_Register"
			android:layout_marginTop="20dp"
			android:id = "@+id/Password_register"
			android:text = "@string/Password_Register"
			android:textSize = "20sp"
			android:textColor = "#000000"/>


		<EditText
			android:layout_width = "150dp"
			android:layout_height = "wrap_content"
			android:id = "@+id/Password_register_edit"
			android:labelFor = "@+id/Password_register_edit"
			android:background = "@drawable/border"
			android:inputType = "textPassword"
			android:layout_below="@+id/Email_register_edit"
			android:layout_marginTop="20dp"
			android:layout_alignParentRight="true"/>


		<!--	Re-enter Password -->

		<TextView
			android:layout_width = "wrap_content"
			android:layout_height = "wrap_content"
			android:id = "@+id/Password_register_repeat"
			android:text = "@string/Password_Register_repeat"
			android:textSize = "20sp"
			android:textColor = "#000000"
			android:layout_below="@+id/Password_register"
			android:layout_marginTop="20dp"/>

		<EditText
			android:layout_width = "150dp"
			android:layout_height = "wrap_content"
			android:id = "@+id/Password_register_edit_repeat"
			android:labelFor = "@+id/Password_register_edit_repeat"
			android:background = "@drawable/border"
			android:inputType = "textPassword"
			android:layout_below="@+id/Password_register_edit"
			android:layout_marginTop="20dp"
			android:layout_alignParentRight="true"/>


	</RelativeLayout>

	<!--	Button	-->
	<RelativeLayout
		android:layout_width = "match_parent"
		android:layout_height = "wrap_content"
		android:layout_marginStart="20dp"
		android:layout_marginEnd="20dp"
		android:layout_marginBottom="20dp"
		android:layout_alignParentBottom="true">

		<Button
			android:layout_width = "wrap_content"
			android:layout_height = "wrap_content"
			android:id = "@+id/Cancel_register"
			android:text = "@string/Cancel"
			android:background = "@color/Red"/>

		<Button
			android:layout_width = "wrap_content"
			android:layout_height = "wrap_content"
			android:id = "@+id/Accept_register"
			android:text = "@string/btnRegister"
			android:background = "@color/Green"
			android:layout_alignParentRight="true"/>

	</RelativeLayout>

</RelativeLayout>