<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:orientation="vertical">

    <RelativeLayout
        android:orientation = "vertical"
        android:layout_width = "match_parent"
        android:layout_height = "match_parent"
        android:layout_marginStart = "10dp"
        android:layout_marginBottom="100dp"
        android:layout_marginEnd = "10dp">

        <!--	Title	-->
        <TextView
            android:id="@+id/song_name_import"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:paddingBottom="5dp"
            android:text="@string/Title"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/song_name_import_edit"
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:layout_below="@+id/song_name_import"
            android:layout_marginStart="20dp"
            android:background="@drawable/border_gray"
            android:gravity="center_horizontal"
            android:hint=""
            android:labelFor="@+id/song_name_import_edit" />


        <!--	Singer	-->

        <TextView
            android:layout_below="@+id/song_name_import_edit"
            android:id="@+id/song_singer_import"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/song_name_import_edit"
            android:layout_alignTop="@+id/song_singer_import_edit"
            android:paddingBottom="5dp"
            android:text="@string/Singer"
            android:textSize="15sp" />


        <EditText
            android:layout_marginTop="20dp"
            android:layout_below="@+id/song_name_import_edit"
            android:id="@+id/song_singer_import_edit"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_alignStart="@+id/song_name_import"
            android:background="@drawable/border_gray"
            android:gravity="center_horizontal"
            android:hint=""
            android:labelFor="@+id/song_singer_import_edit" />



        <!-- Creator -->

        <TextView
            android:id="@+id/song_creator_import"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/song_creator_import_edit"
            android:layout_alignStart="@+id/song_versification_import"
            android:paddingBottom="5dp"
            android:text="@string/Music"
            android:textSize="15sp" />

        <EditText
            android:layout_marginTop="20dp"
            android:id="@+id/song_creator_import_edit"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_alignStart="@+id/song_versification_import_edit"
            android:layout_below="@+id/song_singer_import_edit"
            android:background="@drawable/border_gray"
            android:gravity="center_horizontal"
            android:hint=""
            android:labelFor="@+id/song_creator_import_edit" />


        <!-- Versification -->
        <TextView
            android:id="@+id/song_versification_import"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/song_versification_import_edit"
            android:layout_alignEnd="@+id/song_singer_import"
            android:paddingBottom="5dp"
            android:text="@string/Versification"
            android:textSize="15sp" />

        <EditText
            android:layout_marginTop="20dp"
            android:id="@+id/song_versification_import_edit"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_alignStart="@+id/song_singer_import_edit"
            android:layout_below="@+id/song_creator_import_edit"
            android:background="@drawable/border_gray"
            android:gravity="center_horizontal"
            android:hint=""
            android:labelFor="@+id/song_versification_import_edit" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width = "115dp"
            android:layout_height = "wrap_content"
            android:id="@+id/import_song_basic_back"
            android:text = "@string/back"
            android:background = "@color/Red"
            android:layout_alignParentBottom="true"
            />


        <Button
            android:layout_width = "115dp"
            android:layout_height = "wrap_content"
            android:id="@+id/song_import_basic_next"
            android:text = "@string/next"
            android:background = "@color/Green"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd = "true"/>

    </RelativeLayout>

</RelativeLayout>